# study_libvips

./: README.md
StudyGlib/: settings.gradle
StudyGlib/app/: CMakeLists.txt  build.gradle
StudyGlib/app/src/main/: AndroidManifest.xml
StudyGlib/app/src/main/cpp/: JNIEntry.cpp  JNIEntry.h
StudyGlib/app/src/main/cpp/core/: and_log.h  mutex.c  mutex.h  types.h
StudyGlib/app/src/main/cpp/include/glib-2.0/gobject/: glib-enumtypes.h
StudyGlib/app/src/main/cpp/include/glib-2.0/include/: glibconfig.h
StudyGlib/app/src/main/cpp/study/: buf.c  buf.h  glib_all.h  init.c  init.h  memory.h  object.h  type.c  type.h  util.c  util.h
StudyGlib/app/src/main/cpp/test/: hobject.c  hobject.h  person.c  person.h  test_prop.c  testgobject.c
StudyGlib/app/src/main/java/com/heaven7/android/glib/app/: LibGlib.java  MainActivity.java
StudyGlib/app/src/main/res/layout/: activity_main.xml
StudyGlib/app/src/main/res/values/: strings.xml
StudyGlib/gradle/wrapper/: gradle-wrapper.properties
StudyLibvipsApp/: cvMat_to_vips.txt  note.txt  settings.gradle
StudyLibvipsApp/app/: CMakeLists.txt  build.gradle
StudyLibvipsApp/app/src/main/: AndroidManifest.xml
StudyLibvipsApp/app/src/main/cpp/: JNIEntry.cpp  and_log.h  test_connections.c
StudyLibvipsApp/app/src/main/cpp/include/glib-2.0/gio/: gioenumtypes.h
StudyLibvipsApp/app/src/main/cpp/include/vips/: VConnection8.h  VImage8.h  soname.h  version.h
StudyLibvipsApp/app/src/main/cpp/study_glib/: Test_Reflect.h
StudyLibvipsApp/app/src/main/cpp/vips_ext/: VObject.h
StudyLibvipsApp/app/src/main/cpp/vipscpp/: VImage.cpp  vips-operators.inl
StudyLibvipsApp/app/src/main/java/com/heaven7/android/libvips/app/: AbsMainActivity.java  BaseActivity.java  LibOpencv.java  Libvips.java  MainActivity.java
StudyLibvipsApp/app/src/main/java/com/heaven7/android/libvips/app/sample/: TestLibvipsAc.java  TestOpenCvAc.java
StudyLibvipsApp/app/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCameraView.java
StudyLibvipsApp/app/src/main/java/org/opencv/imgproc/: Imgproc.java
StudyLibvipsApp/app/src/main/res/layout/: ac_asb_main.xml  ac_test_cv.xml  ac_test_libvips.xml
StudyLibvipsApp/app/src/main/res/values/: strings.xml
StudyLibvipsApp/gradle/wrapper/: gradle-wrapper.properties
